--- a/expense.html
+++ b/expense.html
@@ -1,5 +1,94 @@
-<html>
-    <head>
-        <title>EXPENSE TRACKER</title>
-    </head>
+<html lang="en">
+<head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Expense Tracker — Simple UI</title>
+<link rel="stylesheet" href="style.css">
+</head>
+<body>
+<div class="wrap">
+<header>
+<div>
+<h1>Expense Tracker</h1>
+<p style="margin:6px 0 0;color:var(--muted);font-size:0.9rem">Quickly add incomes & expenses — data saved in your browser.</p>
+</div>
+<div class="card" style="padding:10px 14px;font-size:0.95rem">
+<strong id="balance">₦0.00</strong>
+<div style="font-size:0.8rem;color:var(--muted)">Current balance</div>
+</div>
+</header>
+
+
+<section class="summary">
+<div class="tile card">
+<h3>Total Income</h3>
+<p id="total-income">₦0.00</p>
+</div>
+<div class="tile card">
+<h3>Total Expense</h3>
+<p id="total-expense">₦0.00</p>
+</div>
+<div class="tile card">
+<h3>Transactions</h3>
+<p id="count">0</p>
+</div>
+</section>
+
+
+<section class="card controls">
+<div class="form-left">
+<label for="amount">Amount</label>
+<input id="amount" type="number" step="0.01" placeholder="e.g. 2500" />
+
+
+<div style="display:flex;gap:8px;margin-top:12px">
+<div style="flex:1">
+<label for="date">Date</label>
+<input id="date" type="date" />
+</div>
+<div style="width:140px">
+<label for="category">Category</label>
+<select id="category">
+<option value="General">General</option>
+<option value="Food">Food</option>
+<option value="Transport">Transport</option>
+<option value="Salary">Salary</option>
+<option value="Shopping">Shopping</option>
+</select>
+</div>
+</div>
+
+
+<label for="note" style="margin-top:12px">Note / Message (small)</label>
+<textarea id="note" placeholder="e.g. Lunch with Sam"></textarea>
+</div>
+
+
+<div style="min-width:220px;display:flex;flex-direction:column;gap:12px;justify-content:space-between">
+<div>
+<label>Type</label>
+<div class="type-toggle" role="tablist">
+<button id="btn-income" class="active" data-type="income">Income</button>
+<button id="btn-expense" data-type="expense">Expense</button>
+</div>
+</div>
+
+
+<div>
+<label style="visibility:hidden">add</label>
+<button id="addBtn" class="add-btn">Add Transaction</button>
+</div>
+</div>
+</section>
+
+
+<section class="transactions">
+<div class="card">
+<h3 style="margin:0 0 8px 0">Recent Transactions</h3>
+<div id="txList" class="tx-list"></div>
+</div>
+</section>
+</div>
+<script src="script.js"></script>
+</body>
 </html>
