--- a/expense.html
+++ b/expense.html
@@ -2,7 +2,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Expense Tracker — Simple UI</title>
+<title>Expense Tracker</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
