--- a/expense.html
+++ b/expense.html
@@ -1,7 +1,5 @@
-<html lang="en">
+<html>
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Expense Tracker</title>
 <link rel="stylesheet" href="style.css">
 </head>
@@ -10,10 +8,10 @@
 <header>
 <div>
 <h1>Expense Tracker</h1>
-<p style="margin:6px 0 0;color:var(--muted);font-size:0.9rem">Quickly add incomes & expenses — data saved in your browser.</p>
+<p style="margin:6px 0 0;color:var(--muted);font-size:0.9rem">Quickly add incomes & expenses  data saved in your browser.</p>
 </div>
 <div class="card" style="padding:10px 14px;font-size:0.95rem">
-<strong id="balance">₦0.00</strong>
+<strong id="balance">Rs 0.00</strong>
 <div style="font-size:0.8rem;color:var(--muted)">Current balance</div>
 </div>
 </header>
@@ -22,11 +20,11 @@
 <section class="summary">
 <div class="tile card">
 <h3>Total Income</h3>
-<p id="total-income">₦0.00</p>
+<p id="total-income">Rs 0.00</p>
 </div>
 <div class="tile card">
 <h3>Total Expense</h3>
-<p id="total-expense">₦0.00</p>
+<p id="total-expense"> Rs 0.00</p>
 </div>
 <div class="tile card">
 <h3>Transactions</h3>
@@ -60,7 +58,7 @@
 
 
 <label for="note" style="margin-top:12px">Note / Message (small)</label>
-<textarea id="note" placeholder="e.g. Lunch with Sam"></textarea>
+<textarea id="note" placeholder="e.g. Ronish le bhat khayo"></textarea>
 </div>
 
 
